src/test/deca/context/valid/mod_cont_val_01.deca
// Description:
//    Initialisation et typage
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

{
   int a = 2%3;
}
